Fix: Shortcut <K>key would pause stream while typing in chat Fix: Updated old popout chat link Fix: Quick emote holder showing overflowing emotes Fix: Temporarily disabled mute button in user info modals until user management is fixed

--- a/assets/SCSS/modals/_userInfo.scss
+++ b/assets/SCSS/modals/_userInfo.scss
@@ -19,6 +19,11 @@
 		padding: 1em $golden_ratio * 1em;
 	}
 
+	&__mute {
+		// Temporarily disable feature until user registration management is fixed
+		display: none;
+	}
+
 	&__header {
 		position: relative;
 		width: 100%;
